Fixed alignment issue for about page

--- a/src/index.css
+++ b/src/index.css
@@ -61,6 +61,11 @@ body {
   .half-layout {
     height: fit-content;
   }
+
+  #about-content > p {
+    width: 100%!important;
+    text-align:justify;
+  }
 }
 
 #skills {
